--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,94 @@
+@import "../..//global.scss";
+
 .contact{
-    background: blue;
+    background: #Fdfcfa;
+    display: flex;
+
+    @include mobile {
+        flex-direction: column;
+    }
+
+    h2{
+        font-size: 30px;
+        padding-right: 110px;
+        @include mobile {
+            padding-right: 0;
+    
+                    }
+        
+    }
+
+    .left{
+        flex: 1;
+        overflow: hidden;
+
+        img{
+            height: 100%;
+        }
+    }
+    .right{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        form{
+            width: 90%;
+            height: 45%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            padding-right: 100px;
+            @include mobile {
+        padding-right: 0;
+
+
+
+                }
+
+            input{
+                width: 300px;
+                height: 30px;
+                font-size: 14px;
+
+                @include mobile {
+                width: 200px;
+                height: 20px;
+                }
+            }
+
+            textarea{
+                width: 300px;
+                height: 200px;
+                font-size: 14px;
+
+                @include mobile {
+                    width: 200px;
+                    height: 100px;
+                    }
+            }
+
+            button{
+                width: 150px;
+                height: 30px;
+                color: white;
+                background-color: crimson;
+                border: none;
+                border-radius: 10px;
+                font-weight: 500;
+                cursor: pointer;
+                margin-top: 5px;
+
+                &:focus{
+                    outline: none;
+                }
+            }
+            span{
+                color: green;
+            }
+        }
+    }
+
 }
