--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -1,3 +1,121 @@
+@import "../../global.scss";
+
 .test{
-    background-color: cornflowerblue;
+    background-color: #Fdfcfa;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include mobile{
+justify-content: space-around;
+    }
+    h1{
+        font-size: 50px;
+        padding-top: 20px;
+
+        @include mobile{
+            font-size: 20px;
+            padding-top: 3px;
+            overflow: hidden;
+              
+                     }
+    }
+
+    .container{
+        width: 100%;
+        height: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @include mobile{
+        flex-direction: column;
+        height: 100%;    
+                     }
+        .card{
+            width: 250px;
+            height: 70%;
+            border-radius: 10px;
+            box-shadow: 0px 0px 15px -8px black;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            padding: 20px;
+            margin: 0 15px;
+            transition: all 1s ease;
+
+            @include mobile{
+                height: 180px;
+                margin: 3px;                
+                         }
+
+            &.featured{
+                width: 300px;
+                height: 75%;
+            }
+
+            &:hover{
+                transform: scale(1.1);
+            }
+
+            .top{
+                display: flex;
+                align-items: center;                
+                justify-content: center;
+
+                img{
+                    &.left,&.right{
+                        height: 25px;
+                    }
+                    &.user{
+                        height: 60px;
+                        width: 60px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                        margin: 0px 10px;
+
+                        @include mobile{
+                            width: 30px;  
+                            height: 30px;   
+                            overflow: hidden;             
+                                     }
+                    }
+                }
+            }
+
+            .center{
+                padding: 10px;
+                border-radius: 10px;
+                background-color: salmon;
+
+                @include mobile{
+                    padding: 5px;  
+                    font-size: 10px;             
+                             }
+            }
+
+            .bottom{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                h3{
+                    margin-bottom: 5px;
+
+                    @include mobile{
+                        font-size: 14px;
+                                 }
+                }
+
+                h4{
+                    color: crimson;
+
+                    @include mobile{
+                        font-size: 13px;
+                                 }
+                }
+            }
+        }
+    }
 }
