--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -74,7 +74,7 @@
                 width: 150px;
                 height: 30px;
                 color: white;
-                background-color: crimson;
+                background-image: $image;
                 border: none;
                 border-radius: 10px;
                 font-weight: 500;
