--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -10,14 +10,17 @@
     }
 
     .left{
-        flex: .4;
+        flex: .5;
         overflow: hidden;
         align-items: center;
-        padding: 80px 35px;
+        padding: 5em 3em;
+        margin-left: 5em;
 
         @include mobile{
             padding: 20px 12.5px;
             flex: .6;
+            margin-left: 0px;
+
 
         }
 
@@ -33,7 +36,7 @@
             border: 7px solid transparent;  //add a border colro and size 
             float: left;
             //make the circle gradient
-            background-image: linear-gradient(white, white), linear-gradient(to right, crimson, purple); //colors the image border
+            background-image: linear-gradient(white, white), linear-gradient(to top right, crimson, purple); //colors the image border
             background-origin: border-box;
             background-clip: content-box, border-box;
  
@@ -52,7 +55,7 @@
     }
 
     .right{
-        flex: .6;
+        flex: .8;
         overflow: hidden;
         align-items: center;
 
@@ -67,7 +70,7 @@
             height: 100%;
             display: flex;
             flex-direction: column;
-            padding-top: 80px;
+            padding-top: 120px;
 
 
             @include mobile{
