--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -14,6 +14,10 @@
   justify-content: center;
   transition: all 1s ease;
 
+  @include mobile{
+    width: 150px;
+    }
+
   &.active {
     right: 0;
   }
@@ -29,6 +33,11 @@
 
     li {
       margin-bottom: 15px;// the hamburger list item space in between items
+      font-size: 30px;
+      @include mobile{
+        font-size: 20px;
+      }
+
       a {
         font-size: inherit;
         color: inherit;
