--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,14 +5,18 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+            transition: all .7s ease;
+
+    
 
     h1{
         font-size: 50px;
         padding-top: 20px;
 
         @include mobile{
-          padding: 10px 0px;
+          padding: 5px 0px;
           font-size: 30px;
+          overflow: hidden;
 
       }
     }
@@ -22,65 +26,153 @@
         padding: 0;
         list-style: none;
         display: flex; //make horizonal list
+        transition: all .7s ease;
+
+        
 
         @include mobile{
           justify-content: center;
           flex-wrap: wrap;
-          margin:5px;
+          padding: 4px;
+          margin:0px;
+          overflow: hidden;
       }
     }
-    .container {
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap; //makes item go to another line
+    .container{
+      width: 100%;
+      height: 80%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all .7s ease;
 
-        @include mobile{
-        width: 100%;
-      }
-        .item {
-            width: 280px;
-            height: 200px;
-            border-radius: 20px;
-            border: 1px solid rgb(240, 239, 239);
-            margin: 20px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            position: relative;
-            transition: all .5s ease;
-            cursor: pointer; //makes the hover a hand so that it's more clear it is a link
-            
-            //adjust the boxes/images for projects
-            @include mobile{
-              width: 140px;
-              height: 130px;
-              margin: 10px 10px;
 
+
+      @include mobile{
+      flex-direction: column;
+      height: 100%;    
+                   }
+      .card{
+          width: 290px;
+          height: 80%;
+          border-radius: 10px;
+          box-shadow: 0px 0px 15px -8px black;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          padding: 5px;
+          margin: 0 15px 55px;
+          transition: all 1s ease;
+
+          @include mobile{
+              height: 170px;
+              margin: 5px;                
+                       }
+
+          &.featured{
+              width: 300px;
+              height: 75%;
           }
-            h3 {
-                position: absolute;
-                font-size: 20px;
+
+          &:hover{
+              transform: scale(1.1);
+          }
+
+          .top{
+              display: flex;
+              align-items: center;                
+              justify-content: center;
+              margin-top: -20px;
+
+              @include mobile{
+                margin-top: 00px;
+                overflow: hidden;             
+                         }
+
+              img{
+                  &.left,&.right{
+                      height: 40px;
+                  }
+                  &.user{
+                      height: 180px;
+                      width: 240px;
+                      border-radius: 10%;
+                      object-fit: cover;
+
+                      @include mobile{
+                          width: 70px;  
+                          height: 70px;   
+                          overflow: hidden;             
+                                   }
+                  }
               }
-        
-              img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: 1;
+          }
+
+          .center{
+              padding: 5px;
+              border-radius: 10px;
+              opacity: 0.85;
+              background: $image;
+              color: white;
+              margin-bottom: 10px;
+
+              @include mobile{
+                  padding: 2px;  
+                  font-size: 10px;  
+                  margin-bottom: 0px;
+           
+                           }
+          }
+
+          .bottom{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-direction: column;
+              margin-top: -20px;
+
+              @include mobile{
+                margin-top: 0px;
+         
+                         }
+
+
+              h3{
+                  margin-bottom: 5px;
+
+                  @include mobile{
+                      font-size: 12px;
+                      margin-bottom: 1px;
+                      overflow: hidden;             
+
+
+                               }
               }
-              &:hover {
-                background-color: $maincolor;
-                img {
-                  opacity: 0.2;
-                  z-index: 0;
-                }
-            }    
-              
-        }
-    }
+
+              h4{
+                margin-bottom: 15px;
+
+                  @include mobile{
+                      font-size: 11px;
+                      margin-bottom: 2px;
+                      overflow: hidden;             
+
+
+                               }
+              }
+              span{
+                color: gray;
+                text-align: center;
+
+                  @include mobile{
+                      font-size: 10px;
+                      overflow: hidden;             
+
+                               }
+              }
+          }
+      }
+  }
 
 
 
