--- a/src/components/test/test.scss
+++ b/src/components/test/test.scss
@@ -3,119 +3,251 @@
 .test{
     background-color: #Fdfcfa;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    
 
     @include mobile{
 justify-content: space-around;
     }
-    h1{
-        font-size: 50px;
-        padding-top: 20px;
 
-        @include mobile{
-            font-size: 20px;
-            padding-top: 3px;
-            overflow: hidden;
-              
-                     }
-    }
-
-    .container{
-        width: 100%;
-        height: 80%;
-        display: flex;
+    .left{
+        flex: .5;
+        overflow: hidden;
         align-items: center;
-        justify-content: center;
+        padding: 80px 35px;
+        margin-left: 100px;
+
 
         @include mobile{
-        flex-direction: column;
-        height: 100%;    
-                     }
-        .card{
+            padding: 20px 12.5px;
+            flex: .5;
+            margin-left: 00px;
+
+        }
+        .imgContainer2{
             width: 250px;
-            height: 70%;
-            border-radius: 10px;
-            box-shadow: 0px 0px 15px -8px black;
+            height: 250px;
+            margin: 10px;
+            border-top-right-radius: 15%;
             display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            padding: 20px;
-            margin: 0 15px;
-            transition: all 1s ease;
+            align-items: flex-end;
+            justify-content: center;
+            border: 3px solid transparent;  //add a border colro and size  
+            float: left;
+            transition: all .4s ease-in-out;
+            //make the circle gradient
+            background-origin: border-box;
+            background-clip: content-box, border-box;
 
             @include mobile{
-                height: 180px;
-                margin: 3px;                
-                         }
+                width: 150px;
+                height: 150px;
+                margin-top: 5px;
+    
+            }
+            &:hover{
+                border-color: crimson;
+                border-top-right-radius: 0%;
 
-            &.featured{
-                width: 300px;
-                height: 75%;
+            }
+ 
+
+            img{//resize the image and move it within the container so it is more centered
+                height: 100%;
+                width: 100%;
+                object-position: 0px 00px;  
+                transition: all;
+
+                @include mobile{
+                    height: 140%;
+                    width: 140%;
+        
+                }
+
+
+            }
+        }
+
+        .imgContainer{
+            width: 250px;
+            height: 250px;
+            margin: 10px;
+            border-top-right-radius: 15%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            border: 3px solid transparent;  //add a border colro and size  
+            float: left;
+            transition: all .4s ease-in-out;
+            //make the circle gradient
+            background-origin: border-box;
+            background-clip: content-box, border-box;
+
+            @include mobile{
+                width: 150px;
+                height: 150px;
+                margin-top: 5px;
+    
+            }
+            &:hover{
+                border-color: crimson;
+                border-top-right-radius: 0%;
+
+            }
+ 
+
+            img{//resize the image and move it within the container so it is more centered
+                height: 130%;
+                width: 130%;
+                object-position: 0px 50px;  
+                transition: all;
+
+                @include mobile{
+                    height: 140%;
+                    width: 140%;
+        
+                }
+
+
+            }
+        }
+        .imgContainer3{
+            width: 500px;
+            height: 250px;
+            margin-left: 25px;
+            border-top-right-radius: 15%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            border: 3px solid transparent;  //add a border colro and size 
+            float: left;
+            transition: all .4s ease-in-out;
+            //make the circle gradient
+            background-origin: border-box;
+            background-clip: content-box, border-box;
+
+            @include mobile{
+                width: 150px;
+                height: 150px;
+                margin-top: 5px;
+                margin-left: 10px;
+
             }
 
             &:hover{
-                transform: scale(1.1);
+                border-color: crimson;
+                border-top-right-radius: 0%;
+
             }
 
-            .top{
-                display: flex;
-                align-items: center;                
-                justify-content: center;
-
-                img{
-                    &.left,&.right{
-                        height: 25px;
-                    }
-                    &.user{
-                        height: 60px;
-                        width: 60px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                        margin: 0px 10px;
-
-                        @include mobile{
-                            width: 30px;  
-                            height: 30px;   
-                            overflow: hidden;             
-                                     }
-                    }
-                }
-            }
-
-            .center{
-                padding: 10px;
-                border-radius: 10px;
-                background-color: salmon;
+            img{//resize the image and move it within the container so it is more centered
+                height: 130%;
+                width: 130%;
+                object-position: 0px 50px;  
+                transition: all;
 
                 @include mobile{
-                    padding: 5px;  
-                    font-size: 10px;             
-                             }
+                    height: 100%;
+                    width: 100%;
+                    object-position: 0px 00px;  
+
+        
+                }
+
+            }
+        }
+    }
+
+    .right{
+        flex: .5;
+        overflow: hidden;
+        align-items: center;
+        margin-top: -30px;
+        margin-right: 100px;
+
+        @include mobile{
+            padding: 10px 0px;
+            margin-top: 0px;
+            margin-right: 00px;
+
+        }
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            padding-top: 120px;
+
+
+            @include mobile{
+                padding-left: 0;
+                align-items: center;
+                padding-top: 0px;
+             }
+
+            h1{
+                font-size: 40px;
+                margin: 10px 0;
+
+                @include mobile{
+                    font-size: 20px;
+                    align-items: center;
+                }
+            }
+            span{
+                font-size: 15px;
+            margin: 10px 0;
+
+            @include mobile{
+                font-size: 10px;
             }
 
-            .bottom{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
+              }
+            h2{
+                font-size: 30px;
+                @include mobile{
+                    font-size: 25px;
+                    align-items: center;
+                    margin-left: -35px;
+                    
 
-                h3{
-                    margin-bottom: 5px;
-
-                    @include mobile{
-                        font-size: 14px;
-                                 }
                 }
 
-                h4{
-                    color: crimson;
+ 
 
-                    @include mobile{
-                        font-size: 13px;
-                                 }
-                }
+                  .ityped-cursor {
+                    animation: blink 1s infinite;
+                  }
+          
+                  @keyframes blink {
+                      50%{
+                          opacity: 1;
+                      }
+                      100%{
+                          opacity: 0;
+                      }
+                  }
+            }
+       
+      
+
+        }
+    }
+    a {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+  
+        img {
+          width: 40px;
+          animation: arrowBlink 2s infinite;
+        }
+    
+        @keyframes arrowBlink {
+            100%{
+                opacity: 0;
             }
         }
     }
 }
+
