--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -9,15 +9,14 @@
     top: 0;
     z-index: 3;
     transition: all 1s ease;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
     
-
-
 .wrapper{
     padding: 20px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    
 
     .left{
         display: flex;
@@ -92,3 +91,7 @@
     }
   }
 }
+
+.topbar.scroll{
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
