--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,7 +1,9 @@
 @import "../../global.scss";
 
 .works{
-    background-color: crimson;
+    background-color: #Fdfcfa;
+
+    background: $image;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,15 +48,21 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            
 
             .item{
                 width: 800px;
                 height: 100%;
                 background-color: #Fdfcfa;
-                border-radius: 20px;
+                border-color: black;
+                border-radius: 10px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+
+       
+
+
 
                 @include mobile{
                     width: 90%;
